# Coursework_DB

./: README.md  main.py  pyproject.toml
src/: api_requests.py  db_manager.py  user_interface.py  utils.py
utils/: utils.py
