[tool.poetry]
name = "coursework-db"
version = "0.1.0"
description = ""
authors = ["Roman Shemchuk <shemchuk.roman@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.28.0"
psycopg2 = "^2.9.6"
python-dotenv = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"